--- a/css/styles.css
+++ b/css/styles.css
@@ -141,13 +141,14 @@ text-align:center;
 	background: rgba(255, 255, 255, 1); 
 	text-align:center; 
 	width: 170px;
-	padding: 0px 25px;
+	/*padding: 0px 25px;*/
 	cursor: pointer;
 	margin-left: -5px;
 	font-weight: bold;
 	font-family: 'Audiowide', cursive;
 	height: 42px;
 	display: inline-block;color: #00C6B2;
+	border-radius: 5px 
 }
 
 
@@ -293,7 +294,3 @@ padding-top: 16px;
 	}
 }
 
-.control {
-	width: 40px;
-	color: blue;
-}
